2003-09-22	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* common/.cvsignore: Add rtems.texi, rtems.sed.

2003-08-30	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* acinclude.m4: New.
	* common/rtems.texi.in: New.
	* configure.ac: Reflect changes above.
	* project.am: Add COMMON_FILES.
	Add rules to build common/rtems.texi.
	* common/setup.texi: Remove RTEMS* VARs, moved to
	common/rtems.texi.in.
	* Makefile.am: Add common/rtems.texi to CLEANFILES.
	Add common/rtems.sed to DISTCLEANFILES.

2003-08-29	Joel Sherrill <joel@OARcorp.com>

	* HELP.html, index.html.in, rtems_footer.html.in, rtems_header.html.in,
	rtems_support.html.in, FAQ/basic.t, FAQ/build45.t,
	bsp_howto/analog.t, bsp_howto/discrete.t, bsp_howto/nvmem.t,
	bsp_howto/target.t, common/cpright.texi, gnu_docs/gnu_footer.html,
	gnu_docs/gnu_header.html, gnu_docs/index.html, gnu_docs/refcard.html,
	gnu_docs/rtems_tools_index.html, relnotes/install.texi,
	relnotes/intro.texi, relnotes/status.texi, started/nextstep.t,
	started_ada/intro.t, started_ada/tversions.texi: Migrate many
	obsolete references from oarcorp.com to rtems.com. Also send people
	to the support.html page rather than duplicate information.
	* images/rtems_logo.jpg: New file.
	* SUPPORT: Removed.

2003-08-28	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Extract toolversions from ../scripts/setup.def.
	Propagate them to started/tversions.sed.

2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-05-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* Makefile.am: Remove src2html.
	* configure.ac: Remove src2html.

2003-04-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* project.am: clean *.info*.

2003-04-18	Joel Sherrill <joel@OARcorp.com>

	* index.html.in: Merged from Head.

2003-03-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove AC_CONFIG_AUX_DIR.

2003-02-15	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
