@@ -26,8 +26,10 @@ EXTRA_DIST += common/cpright.texi common/setup.texi common/timemac.texi \
 
 html_imagesdir = $(htmldir)/images
 
-HTML_IMAGES = images/dir-arrow.gif images/dvi.gif images/missing-arrow.gif images/next-arrow.gif \
-    images/oaronly.jpg images/pdf.gif images/pdf1.gif images/prev-arrow.gif images/ps.gif images/up-arrow.gif
+HTML_IMAGES = images/dir-arrow.gif images/dvi.gif images/missing-arrow.gif \
+    images/next-arrow.gif images/oaronly.jpg images/pdf.gif images/pdf1.gif 
+    images/rtems_logo.jpg images/prev-arrow.gif images/ps.gif \
+    images/up-arrow.gif
 
 if USE_HTML
 html_images_DATA = $(HTML_IMAGES)
